--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
-  "name": "ojekaja-backend",
-  "version": "1.0.0",
-  "description": "purpose to thesis",
-  "main": "index.js",
+  "name": "appnext",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "author": "sea",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.0",
-    "express": "^4.17.3",
     "mongodb": "^4.5.0",
-    "nodemon": "^2.0.15"
+    "next": "12.1.5",
+    "react": "18.0.0",
+    "react-dom": "18.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.5",
+    "eslint": "8.14.0",
+    "eslint-config-next": "12.1.5",
+    "postcss": "^8.4.12",
+    "postcss-preset-env": "^7.4.3",
+    "tailwindcss": "^3.0.24"
   }
 }
